--- a/loops-lecture.html
+++ b/loops-lecture.html
@@ -7,5 +7,6 @@
 <body>
 <script src="js/loops-lecture.js"></script>
 <script src="js/for-loops.js"></script>
+<script src="js/break_and_continue.js"></script>
 </body>
 </html>
