--- a/objects.html
+++ b/objects.html
@@ -5,6 +5,7 @@
     <title>Objects</title>
 </head>
 <body>
-    <script src="js/objects.js"></script>
+<!--    <script src="js/objects.js"></script>-->
+    <script src="js/rpg.js"></script>
 </body>
 </html>
