--- a/basic-html.html
+++ b/basic-html.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Basic HTML</title>
 </head>
 <body>
-$END$
+ <h1>Welcome to HTML</h1>
+ <img src="img/First_Web_Server.jpg" alt="an old computer from the 1980s. It is the world's first web server.">
+ <p>At Codeup you will learn HTML, the language used to describe web page structure.</p>
+ <h2>HTML Basics</h2>
+ <p>HTML begins with defining the parts of a page. These parts are the elements, marked up by HTML tags.</p>
 </body>
 </html>
