--- a/languages.html
+++ b/languages.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Languages</title>
 </head>
 <body>
-$END$
+    <h1 id="top">Our programming languages</h1>
+    <p>We learned the following languages at Codeup:</p>
+    <ul>
+        <li>JavaScript</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Java</li>
+        <li>MySQL</li>
+    </ul>
+    <p>After graduating from Codeup, we learned:</p>
+    <ol>
+        <li>Python</li>
+        <li>PHP</li>
+        <li>Ruby</li>
+    </ol>
+    <nav>
+        <a href="programmer-for-hire.html">Back to main page</a><br>
+        <br>
+        <a href="#top">Back to the top</a><br>
+    </nav>
+    <article>
+        <h2>About JavaScript</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, architecto beatae eos, excepturi fugit in ipsa iste maxime optio pariatur porro provident quae repudiandae saepe voluptas? Culpa dicta quibusdam voluptatum?</p>
+    </article>
 </body>
 </html>
