--- a/welcome.html
+++ b/welcome.html
@@ -2,11 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>Veridian Dynamics</title>
 </head>
 <body>
-    <p>Hello World</p>
-    <p>Metadata means data about data. In this case it means information about the web page itself.</p>
-    <p>HTML stands for Hypertext Markup Language. We use html tags to "mark up" our content.</p>
+    <header>
+        <h1 id="top">Welcome to Veridian Dynamics</h1>
+        <p>At Veridian Dynamics <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong></p>
+    </header>
+    <hr>
+    <main>
+        <section>
+            <h2>Core Values</h2>
+            <ul>
+                <li>Competence</li>
+                <li>Involvement</li>
+                <li>Technology</li>
+            </ul>
+            <h2>Our Process</h2>
+            <ol>
+                <li>Plan</li>
+                <li>Evaluate</li>
+                <li>Implement</li>
+            </ol>
+            <h2>2022 Vision</h2>
+            <ul>
+                <li>Become #1 in Technology</li>
+                <li>Increase Success by 20%</li>
+                <li>Increase Business by 30%</li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2>Company Vision</h2>
+            <img src="img/pexels-fauxels-3184430-400w.jpg" alt="four people bumping fists at a table with two computers.">
+            <img src="img/pexels-tirachard-kumtanom-450062-400w.jpg" alt="three hikers silhouetted at sunset">
+            <img src="img/pexels-aleksandar-pasaric-2339009-400w.jpg" alt="sunset on a street with many shops in Japan">
+            <img src="img/pexels-rfstudio-3810796-400w.jpg" alt="people gathered around a desk with a computer, working">
+        </section>
+        <section>
+            <h2>Our Product</h2>
+            <table>
+                <tr>
+                    <th>Plan</th>
+                    <th>Price</th>
+                    <th>Features</th>
+                </tr>
+                <tr>
+                    <td>Starter</td>
+                    <td>$99</td>
+                    <td>Base Technology</td>
+                </tr>
+                <tr>
+                    <td>Advanced</td>
+                    <td>$199</td>
+                    <td>Additional Features</td>
+                </tr>
+                <tr>
+                    <td>Premium</td>
+                    <td>$499</td>
+                    <td>Unlimited Support</td>
+                </tr>
+            </table>
+            <p><em>All products come with our quality guarantee&trade;</em></p>
+        </section>
+    </main>
+    <footer>
+        <nav>
+            <a href="#top">Go to the top of the page</a>
+        </nav>
+    </footer>
 </body>
 </html>
