--- a/forms-lec.html
+++ b/forms-lec.html
@@ -12,30 +12,30 @@
     <form method="POST" action="https://request-inspector.glitch.me/">
 
         <label for="username">Username</label>
-        <input id="username" name="username" type="text">
+        <input id="username" name="username" type="text" placeholder="Username here">
         <br>
 
         <label for="password">Password</label>
-        <input id="password" name="password" type="password">
+        <input id="password" name="password" type="password" placeholder="Password here">
         <br>
 
         <label for="body-text">Tell me about yourself...</label>
         <br>
-        <textarea id="body-text" name="body" cols="30" rows="10"></textarea>
+        <textarea id="body-text" name="body" cols="30" rows="10" placeholder="What's up?"></textarea>
         <br>
 
         <h3>What is the correct answer?</h3>
 
-        <input name="multi-choice1" id="choice-a" value="1" type="radio">
+        <input name="multi-choice" id="choice-a" value="A" type="radio">
         <label for="choice-a">A</label>
         <br>
-        <input name="multi-choice2" id="choice-b" value="2" type="radio">
+        <input name="multi-choice" id="choice-b" value="B" type="radio">
         <label for="choice-b">B</label>
         <br>
-        <input name="multi-choice3" id="choice-c" value="3" type="radio">
+        <input name="multi-choice" id="choice-c" value="C" type="radio">
         <label for="choice-c">C</label>
         <br>
-        <input name="multi-choice4" id="choice-d" value="4" type="radio">
+        <input name="multi-choice" id="choice-d" value="D" type="radio">
         <label for="choice-d">D</label>
         <br>
 
@@ -49,6 +49,25 @@
         <br>
 
         <input name="newsletter" type="checkbox" checked><span>Would you like to sign up for our news letter?</span>
+        <br>
+
+        <h3>
+            <label for="coffee-preference">What kind of coffee roast do you like?</label>
+        </h3>
+        <select id="coffee-preference">
+            <option value="light">Light Roast</option>
+            <option value="medium">Medium Roast</option>
+            <option value="dark">Dark Roast</option>
+            <option value="espresso">Espresso Blend</option>
+        </select>
+        <br>
+
+        <input name="userId" value="c-wd-sa-620774" type="hidden">
+        <br>
+
+        <label for="nonactive">Ignore this</label>
+        <input disabled id="nonactive" name="userId" type="text" value="c-wd-sa-620774">
+        <br>
 
         <button type="submit">Explore the fun fun world of forms!</button>
     </form>
