get to midpoint of selectors lecture

--- a/languages.html
+++ b/languages.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Languages</title>
+    <link rel="stylesheet" href="css/alamo.css">
 </head>
 <body>
     <h1 id="top">Our programming languages</h1>
     <p>We learned the following languages at Codeup:</p>
     <ul>
         <li>JavaScript</li>
-        <li>HTML</li>
+        <li><a href="basic-html.html">HTML</a></li>
         <li>CSS</li>
         <li>Java</li>
         <li>MySQL</li>
@@ -27,7 +28,7 @@
     </nav>
     <article>
         <h2>About JavaScript</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, architecto beatae eos, excepturi fugit in ipsa iste maxime optio pariatur porro provident quae repudiandae saepe voluptas? Culpa dicta quibusdam voluptatum?</p>
+        <p class="bottom-border">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, architecto beatae eos, excepturi fugit in ipsa iste maxime optio pariatur porro provident quae repudiandae saepe voluptas? Culpa dicta quibusdam voluptatum?</p>
     </article>
 </body>
 </html>
