--- a/basic-html.html
+++ b/basic-html.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Basic HTML</title>
+    <link rel="stylesheet" href="css/alamo.css">
 </head>
 <body>
  <h1>Welcome to HTML</h1>
  <img src="img/First_Web_Server.jpg" alt="an old computer from the 1980s. It is the world's first web server.">
  <p>At Codeup you will learn HTML, the language used to describe web page structure.</p>
  <h2>HTML Basics</h2>
- <p>HTML begins with defining the parts of a page. These parts are the elements, marked up by HTML tags.</p>
+ <p class="bottom-border">HTML begins with defining the parts of a page. These parts are the elements, marked up by HTML tags.</p>
+ <a href="programmer-for-hire.html">Back to main page</a><br>
 </body>
 </html>
