--- a/programmer-for-hire.html
+++ b/programmer-for-hire.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Alamo Programmers</title>
+    <link rel="stylesheet" href="css/alamo.css">
 </head>
 <body>
     <header>
-    <h1>Alamo Programmers</h1>
+        <h1>Alamo Programmers</h1>
     </header>
     <main>
         <section>
-        <p>We are skilled and experienced web application designers and programmers with <a href="languages.html">skills</a> ranging from basic website design to ecommerce applications and database management. With our skill set we can offer custom web application design to meet <em>any</em> specification. As someone once said, <q>anything is possible</q>.</p>
+            <p id="main-branding">We are skilled and experienced web application designers and programmers with <a href="languages.html">skills</a> ranging from basic website design to ecommerce applications and database management. With our skill set we can offer custom web application design to meet <em>any</em> specification. As someone once said, <q>anything is possible</q>.</p>
         </section>
         <section>
-            <h2>Location</h2>
-            <p>We are located in San Antonio, TX, and we serve clients throughout the southwest and Louisiana.</p>
+            <h2 class="green">Location</h2>
+            <p class="bottom-border">We are located in San Antonio, TX, and we serve clients throughout the southwest and Louisiana.</p>
             <h2>Services</h2>
             <p><a href="languages.html">Programming languages we know</a></p>
             <h3>Prices</h3>
