complete selectors lecture

--- a/programmer-for-hire.html
+++ b/programmer-for-hire.html
@@ -12,6 +12,10 @@
     <main>
         <section>
             <p id="main-branding">We are skilled and experienced web application designers and programmers with <a href="languages.html">skills</a> ranging from basic website design to ecommerce applications and database management. With our skill set we can offer custom web application design to meet <em>any</em> specification. As someone once said, <q>anything is possible</q>.</p>
+            <article>
+                <p>Here's an interesting article about us: </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aliquid, assumenda eos exercitationem facere facilis fuga fugiat iusto modi possimus quae quam quasi, quo sit tempora vero voluptate voluptatibus!</p>
+            </article>
         </section>
         <section>
             <h2 class="green">Location</h2>
