--- a/programmer-for-hire.html
+++ b/programmer-for-hire.html
@@ -10,9 +10,32 @@
     <header>
         <h1>Alamo Programmers</h1>
     </header>
+    <nav>
+        <a href="languages.html">Languages</a>
+        <a href="#projects">Projects</a>
+        <a href="#ceo">Our CEO</a>
+        <a href="#testimonials">Testimonials</a>
+    </nav>
+    <main>
+       <section>
+            <h2>Quality web apps</h2>
+            <p id="main-branding">We are skilled and experienced web application designers and programmers with <a href="languages.html">skills</a> ranging from basic website design to ecommerce applications and database management. With our skill set we can offer custom web application design to meet <em>any</em> specification. As someone once said, <q>anything is possible</q>.</p>
+            <p>Our work is customer-centered and backed up by a 100% money-back guarantee. We will work with you to make sure your site perfectly meets your requirements, or you pay nothing.</p>
+        </section>
+        <section>
+            <h2>Our story</h2>
+            <p>We have deep roots in San Antonio in South Texas. We trained in web application programming and design at Codeup right here in San Antonio. We started Alamo Programmers to serve our community with home-grown, made-in-San-Antonio web app solutions that take into account our local perspective and interests.</p>
+        </section>  
+        <section>
+            <h2>Alamo Web App Solutions</h2>
+            <p>We have a variety of options available to bring you customers, keep customers, expand your sales, or provide information to your client base. We are information specialists and we can help you organize and provide information, whether internally for your own business, or facing externally towards your client base.</p>
+        </section>    
+        <section>
+            <h2 class="green">Location</h2>
+            <p class="bottom-border">We are located in San Antonio, TX, and we serve clients throughout the southwest and Louisiana.</p>
+        </section>
+    </main>
     <section id="sidebar">
-        <h2>Services</h2>
-        <p><a href="languages.html">Programming languages we know</a></p>
         <h3>Prices</h3>
         <table>
             <tr>
@@ -46,25 +69,6 @@
             </blockquote>
         </aside>
     </section>
-    <main>
-       <section>
-            <h2>Quality web apps</h2>
-            <p id="main-branding">We are skilled and experienced web application designers and programmers with <a href="languages.html">skills</a> ranging from basic website design to ecommerce applications and database management. With our skill set we can offer custom web application design to meet <em>any</em> specification. As someone once said, <q>anything is possible</q>.</p>
-            <p>Our work is customer-centered and backed up by a 100% money-back guarantee. We will work with you to make sure your site perfectly meets your requirements, or you pay nothing.</p>
-        </section>
-        <section>
-            <h2>Our story</h2>
-            <p>We have deep roots in San Antonio in South Texas. We trained in web application programming and design at Codeup right here in San Antonio. We started Alamo Programmers to serve our community with home-grown, made-in-San-Antonio web app solutions that take into account our local perspective and interests.</p>
-        </section>  
-        <section>
-            <h2>Alamo Web App Solutions</h2>
-            <p>We have a variety of options available to bring you customers, keep customers, expand your sales, or provide information to your client base. We are information specialists and we can help you organize and provide information, whether internally for your own business, or facing externally towards your client base.</p>
-        </section>    
-        <section>
-            <h2 class="green">Location</h2>
-            <p class="bottom-border">We are located in San Antonio, TX, and we serve clients throughout the southwest and Louisiana.</p>
-        </section>
-    </main>
     <footer>
          <a href="#contact">Contact Us</a>
         <a href="#about">About Us</a>
@@ -72,5 +76,6 @@
         <a href="#careers">Careers</a>
         <p>&copy;2021 Alamo Programmers</p>
     </footer>
+    <p><img src="img/logo.png"></p>
 </body>
 </html>
