--- a/dc-marvel.html
+++ b/dc-marvel.html
@@ -14,6 +14,12 @@
   <p id="dontLike">I don't like</p>
   <p id="marvel">Marvel</p>
   <p id="dc">DC</p>
+
+  <form name = "changeColor">
+      <label for="colorPreference">Enter Your Color</label>
+      <input type="text" name="colorPreference" id="colorPreference">
+      <input type="button" id="colorSubmission" value="Submit">
+  </form>
   <script src="js/dc-marvel.js"></script>
 </body>
 </html>
