--- a/dc-marvel.html
+++ b/dc-marvel.html
@@ -20,6 +20,9 @@
       <input type="text" name="colorPreference" id="colorPreference">
       <input type="button" id="colorSubmission" value="Submit">
   </form>
+
+  <p id="theHulk" data-state="The Hulk" data-strength="super" data-intelligence="low">The Hulk</p>
+  <button id="transformHulk">Transform Hulk</button>
   <script src="js/dc-marvel.js"></script>
 </body>
 </html>
