--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -24,6 +24,10 @@
   pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
   culpa qui officia deserunt mollit anim id est laborum.
 </p>
+<button id="mainTitleChange">Change the Title</button>
+<button id="subTitleChange">Change the Sub-Title</button>
+<button id="listColorChange">Change the List Colors</button>
+<button id="contentChange">Change the content</button>
 
 <script>
   (function() {
@@ -32,35 +36,76 @@
     var mainHeader = document.getElementById("main-header");
 
     // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-    mainHeader.innerHTML = "JavaScript is Cool";
+    function titleChange ()  {
+      mainHeader.innerHTML = "JavaScript is Cool";
+    }
 
     // TODO: Uncomment the next line and get the sub header element by id
     var subHeader = document.getElementById("sub-header");
 
     // TODO: Set the text color of subHeader to blue
-    subHeader.style.color = "blue";
+    var subHeaderChange = function () {
+      subHeader.style.color = "blue";
+    }
 
     // TODO: Uncomment the next line and get all list items
     var listItems = document.getElementsByTagName("li");
 
     // TODO: Set text color on every other list item to grey
     // TODO: Set text color of li with dbid = 1 to blue
-    for (var i = 0; i < listItems.length; i++) {
-      if (listItems[i].getAttribute('data-dbid') === '1'){
-        listItems[i].style.color = "blue";
-        //continue;
-      }
-      if (i % 2 !== 0) {
-        listItems[i].style.color = "grey";
-      }
-    }
+
+    // If we are redefining the function in the addEventListener method, we need to comment out the code
+    // so that the change doesn't happen on page load.
+
+    // for (var i = 0; i < listItems.length; i++) {
+    //   if (listItems[i].getAttribute('data-dbid') === '1'){
+    //     listItems[i].style.color = "blue";
+    //     //continue;
+    //   }
+    //   if (i % 2 !== 0) {
+    //     listItems[i].style.color = "grey";
+    //   }
+    // }
 
     // TODO: Uncomment the next line and get all elements with class name sub-paragraph
     var subParagraphs = document.getElementsByClassName("sub-paragraph");
 
     // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-    subParagraphs[0].innerHTML = "Mission Accomplished!";
+    // subParagraphs[0].innerHTML = "Mission Accomplished!";
+
+    // DOM EVENTS
+
+    // Using functions we defined above to pass as the callback function in the addEventListener method.
+    document.querySelector("#mainTitleChange").addEventListener("click", titleChange);
+    document.querySelector("#subTitleChange").addEventListener("click", subHeaderChange);
+
+    // Defining the function within the addEventListener method
+    document.querySelector("#listColorChange").addEventListener("click", function() {
+      for (var i = 0; i < listItems.length; i++) {
+        if (listItems[i].getAttribute('data-dbid') === '1'){
+          listItems[i].style.color = "blue";
+          //continue;
+        }
+        if (i % 2 !== 0) {
+          listItems[i].style.color = "grey";
+        }
+      }
+
+      document.getElementById("contentChange").addEventListener("click", function() {
+        subParagraphs[0].innerHTML = "Mission Accomplished!";
+      });
+
+    });
+
+
+
+
+
+
   })();
+
+
+
 </script>
 </body>
 </html>
