finished mapbox lecture

--- a/mapbox-1.html
+++ b/mapbox-1.html
@@ -39,9 +39,13 @@
 
   console.log("The current zoom value is: ",map.getZoom());
 
-  $('#zoom').click(function() {
-    map.setZoom(map.getZoom() + 1)
-    console.log(map.getZoom());
+  // $('#zoom').click(function() {
+  //   map.setZoom(map.getZoom() + 1)
+  //   console.log(map.getZoom());
+  // })
+
+  document.querySelector('#zoom').on('click', function () {
+
   })
 
 
