--- a/mapbox-api-lec.html
+++ b/mapbox-api-lec.html
@@ -6,6 +6,12 @@
 <!-- MAPBOX TAGS   -->
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
 <!---->
+
+    <style>
+        .popup-font {
+            font-family: Chalkboard, sans-serif;
+        }
+    </style>
 </head>
 <body>
   <h1>Welcome to MapBox!</h1>
@@ -14,6 +20,7 @@
 
 
 <script src="js/keys.js"></script>
+<script src="js/mapbox-geocoder-utils.js"></script>
 <script src='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
 <script>
 
@@ -48,13 +55,24 @@
 
     var popup = new mapboxgl.Popup()
         .setLngLat(marker.getLngLat())
-        .setHTML("<h3>Hello World!</h3>")
-        .setMaxWidth("300px")
+        .setHTML("<h3>The Alamo!</h3>")
+        .setMaxWidth("100px")
         .addTo(map);
 
   console.log(popup)
 
   marker.setPopup(popup);
+  popup.addClassName('popup-font');
+
+
+  geocode("600 Navarro St #600, San Antonio, TX 78205", MAPBOX_ACCESS_TOKEN).then(function (results) {
+      console.log(results);
+  })
+
+
+    reverseGeocode({lng: -98.489598, lat: 29.426808}, MAPBOX_ACCESS_TOKEN).then(function(results) {
+        console.log(results);
+    })
 
 
 </script>
